package com.se.its.domain.project.domain;

import com.se.its.domain.member.domain.Member;
import jakarta.persistence.*;
import lombok.*;

@Entity
@Getter
@Builder
@NoArgsConstructor(access = AccessLevel.PROTECTED)
@AllArgsConstructor
public class ProjectMember {
    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    private Long id;

    @ManyToOne
    @JoinColumn(name = "memberId")
    private Member member;

    @ManyToOne
    @JoinColumn(name = "projectId")
    private Project project;

    @Column(name = "isDeleted")
    private Boolean isDeleted;

    public void setIsDeleted(Boolean isDeleted){
        this.isDeleted = isDeleted;
    }
}
